tests/samples/invalid/misplaced_variable.pn
fn main() -> i32
{
	var x = y;

	var y = 13;

	return:
	x
}
